--- a/website2/package.json
+++ b/website2/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "tailwind_build": "tailwindcss -i ./public/stylesheets/style.css -o ./public/stylesheets/main.css"
   },
   "dependencies": {
