--- a/website2/package.json
+++ b/website2/package.json
@@ -10,6 +10,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
